syntax = "proto3";

package canf22g2.grpc;
import "google/api/annotations.proto";
option go_package = "canf22g2/grpc";

// DayNightMode information
message GetDayNightModeRequest {}

message GetDayNightModeResponse {
	string dayNightMode = 1; // Day or Night mode
}

service LuxService {
	rpc GetDayNightMode(GetDayNightModeRequest) returns (GetDayNightModeResponse) {
		option (google.api.http) = {
			get: "/v1/lux/mode"
		};	
	}
}
